# maxwell-agent-project

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run_cli_agent.bat  run_web_agent.bat  启动_Maxwell智能体演示.bat  命令行演示.bat  打开网页演示.bat
docs/academic_report_20260429/: build_report.ps1  maxwell_agent_academic_report_20260429.tex
docs/academic_report_brief_20260429/: build_report.ps1  maxwell_agent_academic_report_brief_20260429.tex
scripts/: download_ansys_student.js  extract_and_install_ansys_student.ps1  run_2d_regression.py  run_agent_benchmark.py  run_generic_2d_regression.py  setup_windows.ps1  start_web_demo.ps1  watch_ansys_download.ps1
src/maxwell_agent/: __init__.py  agent.py  capability_graph.py  case_report.py  cli.py  config.py  demo.py  demo_server.py  errors.py  evaluation.py  experience.py  llm_client.py  maxwell_env.py  maxwell_executor.py  maxwell_ir.py  models.py  primitive_library.py  prompting.py  pyaedt_compat.py  residuals.py  script_runner.py  script_validation.py  semantics.py
tests/: test_case_report.py  test_current_range.py  test_demo.py  test_feedback_loop.py  test_models.py  test_script_runner.py
